--- a/visual/vans.html
+++ b/visual/vans.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
-<body>
+<body class="body-vans">
 
   <header>
 
@@ -37,7 +37,7 @@
 
   <main>
     <border>
-      <div class="content">
+      <div class="content-vans">
         <div class="left-side">
           <div class="font">
           <h1></h1>
@@ -72,29 +72,29 @@
     </div>
         </div>
 
-      <section class="slideshow-conteiner">
+      <section class="slideshow-conteiner-vans">
 
-        <div class="slide fade">
-          <img src="vf1.png" style="width: 100%" class="imgSlide">
-
-        </div>
-
-        <div class="slide fade">
-          <img src="vf2.png" style="width: 100%" class="imgSlide">
+        <div class="slide fade-vans">
+          <img src="./vf1.png" style="width: 100%" class="imgSlide-vans">
 
         </div>
 
-        <div class="slide fade">
-          <img src="vf3.png" style="width: 100%" class="imgSlide">
+        <div class="slide fade-vans">
+          <img src="./vf2.png" style="width: 100%" class="imgSlide-vans">
+
+        </div>
+
+        <div class="slide fade-vans">
+          <img src="./vf3.png" style="width: 100%" class="imgSlide-vans">
 
 
         </div>
 
         <section style="text-align:center" class="indicator-container">
 
-          <span class="indicator" onclick="slideAtual(1)"></span>
-          <span class="indicator" onclick="slideAtual(2)"></span>
-          <span class="indicator" onclick="slideAtual(3)"></span>
+          <span class="indicator-vans" onclick="slideAtual(1)"></span>
+          <span class="indicator-vans" onclick="slideAtual(2)"></span>
+          <span class="indicator-vans" onclick="slideAtual(3)"></span>
         </section>
       </section>
 
@@ -104,7 +104,7 @@
 
     </border>
   </main>
-  <script src="slide.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
