--- a/visual/vans.html
+++ b/visual/vans.html
@@ -26,7 +26,6 @@
         <li><a href="/adidas" title="adidas">Adidas</a></li>
         <li class="active"><a href="/vans" title="vans">Vans</a></li>
       </ul>
-
     </nav>
 
   </header>
@@ -70,6 +69,20 @@
          
         </div>
     </div>
+    <main class="mostrador">
+      <section class="fotos">
+        <div class="carrosel">
+          <img src="vc1.png" alt="Vans 1">
+          <img src="vfv1.png" alt="Vans 2">
+          <img src="vl1.png" alt="Vans 3">
+          <img src="vo1.png" alt="Vans 4">
+        </div>
+
+        
+      </section>
+
+
+    </main>
         </div>
 
       <section class="slideshow-conteiner-vans">
