--- a/visual/index.html
+++ b/visual/index.html
@@ -16,7 +16,7 @@
 
         <nav class="menu">
             <div class="logo">
-                <img src="logo.ico" width="140px" height="140px" />
+                <img src="/visual/logo.ico" width="140px" height="140px" />
             </div>
             <ul>
                 <li class="active"><a href="/" title="home">Sneaker House</a></li>
