--- a/visual/vans.html
+++ b/visual/vans.html
@@ -13,41 +13,45 @@
   <header>
 
     <nav class="menu">
-      <div class="logo-vans">
-        <img src="vans.ico" width="90px" height="60px" href="/" />
-      </div>
-      <div class="logos">
-        <img src="logo.ico" width="120px" height="150px" href="/" />
-      </div>
-      <ul>
-        <li><a href="/" title="home">Sneaker House</a></li>
-        <li><a href="/sobre" title="sobre">Sobre nós</a></li>
-        <li><a href="/nike" title="nike">Nike</a></li>
-        <li><a href="/adidas" title="adidas">Adidas</a></li>
-        <li class="active"><a href="/vans" title="vans">Vans</a></li>
-      </ul>
+        <div class="logo">
+            <img src="logo.ico" width="140px" height="140px"/>
+        </div>
+        <ul>
+            <li><a href="/" title="home">Sneaker House</a></li>
+            <li><a href="/sobre" title="sobre">Sobre nós</a></li>
+            <li><a href="/nike" title="nike">Nike</a></li>
+            <li><a href="/adidas" title="adidas">Adidas</a></li>
+            <li><a href="/jordan" title="jordan">Jordan</a></li>
+            <li class="active"><a href="/vans" title="vans">Vans</a></li>
+        </ul>
+
     </nav>
 
-  </header>
+</header>
 
   <aside>
 
   </aside>
 
+
   <main>
+
+    <img src="Barramenu.png" class="img-barra" href="/beneficios">
+
     <border>
       <div class="content-vans">
         <div class="left-side">
           <div class="font">
-          <h1></h1>
+          <img src="vanslogo.png" class="vanslogo">
           <br>
           <br>
           <br>
           <h3>Marca: Vans</h3>
           <p>TÊNIS VANS OLD SKOOL</p>
-          <span>R$379,99</span>
+          <txt class="promo-txt">R$ 499,90 </txt>
+          <span>R$ 379,99</span>
           <br>
-          <a href="">Adicionar ao Carrinho</a>
+          <a href="" class="txt-btn">Adicionar ao Carrinho</a>
         </div>
         <div class="buttons">
           <legend>Selecione seu tamanho</legend>
