--- a/visual/index.html
+++ b/visual/index.html
@@ -15,8 +15,8 @@
     <header>
 
         <nav class="menu">
-            <div class="logo">
-                <img src="logo.ico" width="140px" height="140px"/>
+            <div class="logo-index">
+                <img src="logo.ico" width="140px" height="140px" />
             </div>
             <ul>
                 <li class="active"><a href="/" title="home">Sneaker House</a></li>
@@ -36,7 +36,7 @@
     </aside>
     <main>
 
-        <img src="Barramenu.png" class="img-barra" href="/beneficios">
+        <a href="/beneficios"><img src="Barramenu.png" class="img-barra"></a>
 
         <div class="mid-box">
             <div class="text-box">
