--- a/visual/index.html
+++ b/visual/index.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneaker House</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css'>
-    <script src="script.js"> </script>
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/25a00949b4.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="body-index">
 
 
     <div class="disclaimer">
+        <p class="disclaimer-text">
+            <i class="fa-solid fa-circle-check"></i> Compre e venda seus tênis com segurança.
+
+            <i class="fa-solid fa-dollar-sign"></i> Quero vender meu tênis.
+        </p>
     </div>
 
     <header>
@@ -36,8 +42,13 @@
 
     </header>
 
-    <aside>
+    <div class="subpromo">
+        <p class="subpromo-text">
+            Use o cupom <strong>PRIMEIRA,</strong> e garanta 10% OFF em produtos acima de <strong>R$ 499,90.</strong>
+        </p>
+    </div>
 
+    <aside>
     </aside>
     <main>
 
@@ -121,7 +132,5 @@
 
 
 </body>
-
 <script src="script.js"> </script>
-
 </html>
