--- a/visual/vans.html
+++ b/visual/vans.html
@@ -29,6 +29,12 @@
 
   </header>
 
+  <div class="subpromo">
+    <p class="subpromo-text">
+      Use o cupom <strong>PRIMEIRA,</strong> e garanta 10% OFF em produtos acima de <strong>R$ 499,90.</strong>
+    </p>
+  </div>
+
   <aside>
 
   </aside>
