--- a/visual/index.html
+++ b/visual/index.html
@@ -78,26 +78,11 @@
         <p>ASDPAFPAPSPA</p>
         <p>ASDPAFPAPSPA</p>
 
-        <section class="slideshow-conteiner">
+        <div class="slideshow-conteiner">
 
-            <div class="slide fade">
-                <a href="/nike"><img src="s1.png" style="width: 100%" class="imgSlide"> </a>
+            <img src="banner snk.png" width="100%"/>
 
-            </div>
-
-            <div class="slide fade">
-                <a href="/nike"> <img src="s2.png" style="width: 100%" class="imgSlide"> </a>
-
-            </div>
-
-            <div class="slide fade">
-                <a href="/nike"> <img src="s3.png" style="width: 100%" class="imgSlide"> </a>
-
-            </div>
-
-            <a class="btnAnterior" onclick="mudarSlide(-1)">&lsaquo;</a>
-            <a class="btnProximo" onclick="mudarSlide(1)">&rsaquo;</a>
-        </section>
+        </div>
         <p>ASDPAFPAPSPA</p>
         <p>ASDPAFPAPSPA</p>
         <p>ASDPAFPAPSPA</p>
