--- a/visual/index.html
+++ b/visual/index.html
@@ -73,7 +73,7 @@
 
         <div class="container-tenis">
             <div class="card">
-                <img src="vc1.png" class="card-img" alt="">
+                <img src="YB1.png" class="card-img" alt="">
                 <div class="card-data">
                     <h1 class="card-title">Tênis Nike</h1>
                     <span class="card-preco">R$XXX</span>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="card">
-                <img src="vfv1.png" class="card-img" alt="">
+                <img src="JP1.png" class="card-img" alt="">
                 <div class="card-data">
                     <h1 class="card-title">Tênis Nike 2</h1>
                     <span class="card-preco">R$XXX</span>
