--- a/visual/index.html
+++ b/visual/index.html
@@ -10,7 +10,7 @@
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25a00949b4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body class="body-index">
@@ -71,103 +71,38 @@
             </div>
         </div>
 
-        <section class="slideshow-conteiner">
-
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+        <div class="container-tenis">
+            <div class="card">
+                <img src="vc1.png" class="card-img" alt="">
+                <div class="card-data">
+                    <h1 class="card-title">Tênis Nike</h1>
+                    <span class="card-preco">R$XXX</span>
+                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
 
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+            <div class="card">
+                <img src="vfv1.png" class="card-img" alt="">
+                <div class="card-data">
+                    <h1 class="card-title">Tênis Nike 2</h1>
+                    <span class="card-preco">R$XXX</span>
+                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
 
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+            <div class="card">
+                <img src="vf1.png" class="card-img" alt="">
+                <div class="card-data">
+                    <h1 class="card-title">Tênis Nike 3</h1>
+                    <span class="card-preco">R$XXX</span>
+                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
+        </div>
 
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper mySwiper container">
-                <div class="swipre-wrapper content">
-
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="image">
-                                <img src="vc1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-        </section>
 
         <div class="banner-img">
             <img src="banner snk.png" width="100%" />
@@ -204,28 +139,8 @@
 
 
 
-    <script src="script.js"> </script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
-    <script>
 
-        var swiper = new Swiper(" .mySwiper",{
-            slidesPerView:3,
-            spaceBetween:30,
-            slidesPerGroup:3,
-            loop:true,
-            loopFillGroupWithBlank:true,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            }
-        }
-        )
-
-    </script>
+    <script src="script.js"></script>
 </body>
 
 
