--- a/visual/index.html
+++ b/visual/index.html
@@ -71,23 +71,26 @@
             </div>
         </div>
 
+
         <div class="container-tenis">
             <div class="card">
                 <img src="YB1.png" class="card-img" alt="">
                 <div class="card-data">
-                    <h1 class="card-title">Tênis Nike</h1>
-                    <span class="card-preco">R$XXX</span>
-                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <h1 class="card-title">Tênis Yeezy Boost 350</h1>
+                    <span class="card-preco">R$ 1629,90</span>
+                    <p class="card-description">A linha adidas yeezy foi criada como consequência da colaboração entre a
+                        Adidas e o rapper americano Kanye West</p>
                     <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="JP1.png" class="card-img" alt="">
+                <img src="JP1.png" class="card-imgj" alt="">
                 <div class="card-data">
-                    <h1 class="card-title">Tênis Nike 2</h1>
-                    <span class="card-preco">R$XXX</span>
-                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <h1 class="card-title">Tênis Air Jordan 1 x PSG </h1>
+                    <span class="card-preco">R$ 1899,90</span>
+                    <p class="card-description">Este novo lançamento do Air Jordan 1, é mais uma colaboração da marca
+                        com o time de futebol PSG. </p>
                     <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
@@ -95,14 +98,18 @@
             <div class="card">
                 <img src="vf1.png" class="card-img" alt="">
                 <div class="card-data">
-                    <h1 class="card-title">Tênis Nike 3</h1>
-                    <span class="card-preco">R$XXX</span>
-                    <p class="card-description">sadskjdklajoiioeiowjfjsdlkfjklwj</p>
+                    <h1 class="card-title">Tênis Vans OLD SKOOL</h1>
+                    <span class="card-preco">R$ 379,99</span>
+                    <p class="card-description">Tênis Vans Old Skool Sendo a linha que balança o mundo do skate o tênis
+                        Vans Old Skool é o clássico que amamos!</p>
                     <a href="#" class="card-button">Compre já</a>
                 </div>
             </div>
         </div>
 
+        <div class="adidas-page">
+            <img src="adidasbanner.png" style="width: 100%" class="adidasimgban">
+        </div>
 
         <div class="banner-img">
             <img src="banner snk.png" width="100%" />
