--- a/visual/index.html
+++ b/visual/index.html
@@ -102,7 +102,7 @@
                     <span class="card-preco">R$ 379,99</span>
                     <p class="card-description">Tênis Vans Old Skool Sendo a linha que balança o mundo do skate o tênis
                         Vans Old Skool é o clássico que amamos!</p>
-                    <a href="#" class="card-button">Compre já</a>
+                    <a href="/vans" class="card-button">Compre já</a>
                 </div>
             </div>
         </div>
