--- a/visual/vans.html
+++ b/visual/vans.html
@@ -48,7 +48,7 @@
       <div class="content-vans">
         <div class="left-side">
           <div class="font">
-            <img src="vanslogo.png" class="vanslogo">
+            <img src="vanslogo.png" class="vanslogo"/>
             <br>
             <br>
             <br>
@@ -57,7 +57,7 @@
             <txt class="promo-txt">R$ 499,90 </txt>
             <txt class="parcela-txt">EM ATÉ</txt>
             <txt class="parcela-txt2">10X DE R$ 37,99</txt>
-            <span>R$ 379,99</span>
+            <span class = "preço"> R$ 379,99</span>
             <br>
             <a href="" class="txt-btn">Adicionar ao Carrinho</a>
           </div>
