--- a/visual/index.html
+++ b/visual/index.html
@@ -5,7 +5,7 @@
 <head>
 <link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
 <link href='https://unpkg.com/css.gg@2.0.0/icons/css/instagram.css' rel='stylesheet'>
-<link rel="stylesheet" type="text/css" href="style2.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   
@@ -16,7 +16,7 @@
       <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre nós </a> </li>
       <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a> 
       <ul class="nav-dropdown">
-            <li class="nav-item"> <a href="#" class="nav-link"> Nike </a> 
+            <li class="nav-item"> <a href="/tenis" class="nav-link"> Nike </a> 
             <li class="nav-item"> <a href="#" class="nav-link"> Jordan </a>
             <li class="nav-item"> <a href="#" class="nav-link"> Vans </a>
             <li class="nav-item"> <a href="#" class="nav-link"> Adidas </a>   
