--- a/visual/index.html
+++ b/visual/index.html
@@ -27,7 +27,7 @@
     
             <div class="login">
  
-              <a id="login-button" ms-hide-element="true" href="#" class="button logout login w-button">Login</a>
+              <a id="login-button" ms-hide-element="true" href="/login" class="button logout login w-button">Login</a>
               
         </div>
   </div>
