--- a/visual/index.html
+++ b/visual/index.html
@@ -13,16 +13,11 @@
     <ul class="nav-content">
       <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a> </li>
       <li class="nav-item"> <a href="#" class="nav-link"> Home </a> </li>
-      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre nós </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a> 
-      <ul class="nav-dropdown">
-            <li class="nav-item"> <a href="/tenis" class="nav-link"> Nike </a> 
-            <li class="nav-item"> <a href="#" class="nav-link"> Jordan </a>
-            <li class="nav-item"> <a href="#" class="nav-link"> Vans </a>
-            <li class="nav-item"> <a href="#" class="nav-link"> Adidas </a>   
-      </ul>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a> 
+      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre Nós </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Usuários </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Cadastro de Produtos </a> </li>
     </ul>
     
             <div class="login">
