--- a/visual/lista.html
+++ b/visual/lista.html
@@ -13,36 +13,37 @@
 
   <div class="navbar" id="navbar">
     <ul class="nav-content">
-      <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a>
-      </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a> </li>
       <li class="nav-item"> <a href="#" class="nav-link"> Home </a> </li>
-      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre nós </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a>
-        <ul class="nav-dropdown">
-          <li class="nav-item"> <a href="/tenis" class="nav-link"> Nike </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Jordan </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Vans </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Adidas </a>
-        </ul>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a>
+      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre Nós </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Usuários </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Cadastro de Produtos </a> </li>
     </ul>
-
-    <div class="login">
-
-      <a id="login-button" ms-hide-element="true" href="#" class="button logout login w-button">Login</a>
-
-    </div>
+    
+            <div class="login">
+ 
+              <a id="login-button" ms-hide-element="true" href="/login" class="button logout login w-button">Login</a>
+              
+        </div>
   </div>
-
-  <div class="subnav">
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder=" O que você procura?" name="search">
-      </form>
-    </div>
+  
+     <div class="subnav">
+            <div class="search">
+            <form action="#">
+                <input type="text"
+                       placeholder=" O que você procura?"
+                       name="search">
+            </form>
+        </div>
   </div>
-
+  
+   <div class="subpromo">
+  <p class="subpromo-text">
+     <marquee scrollamount="15"> Use o cupom <strong>PRIMEIRA,</strong> e garanta 10% OFF em produtos acima de <strong>R$ 499,90.</strong> </marquee>
+  </p>
+</div>
   <main>
 <div class="lista-usuarios">
     <h1>Usuários cadastrados</h1>
