--- a/visual/menu.html
+++ b/visual/menu.html
@@ -1,12 +1,13 @@
 <div class="navbar" id="navbar">
     <ul class="nav-content">
       <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Home </a> </li>
+      <li class="nav-item"> <a href="/" class="nav-link"> Home </a> </li>
       <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre Nós </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a> </li>
       <li class="nav-item"> <a href="#" class="nav-link"> Contato </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Usuários </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Cadastro de Produtos </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Cadastro de Tênis </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Compras </a> </li>
+      <li class="nav-item"> <a href="#" class="nav-link"> Cadastro de Marcas </a> </li>
+      <li class="nav-item"> <a href="/listaClientes" class="nav-link"> Clientes </a> </li>
     </ul>
     
             <div class="login">
